# Cordic

./: CMakeLists.txt  CordicConfig.cmake.in  CordicConfigVersion.cmake.in
cmake/: AddPrefix.cmake
include/: cordic.h
include/cordic/: args.h  asserts.h  config.h  cordic.h  result.h  suite.h  test.h  vargs.h
src/: CMakeLists.txt  dummy.c  suite.c
